--- a/app/src/main/res/layout/activity_capacities.xml
+++ b/app/src/main/res/layout/activity_capacities.xml
@@ -7,4 +7,14 @@
         android:layout_height="match_parent"
         tools:context=".CapacitiesActivity">
 
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/addCapacityButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_margin="10dp"
+            app:backgroundTint="@color/colorPrimary"
+            android:src="@android:drawable/ic_menu_add"/>
+
 </android.support.constraint.ConstraintLayout>
