--- a/app/src/main/res/layout/activity_capacities.xml
+++ b/app/src/main/res/layout/activity_capacities.xml
@@ -5,7 +5,13 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="5dp"
         tools:context=".CapacitiesActivity">
+
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/capacitiesRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/addCapacityButton"
